--- a/views/snippets.xml
+++ b/views/snippets.xml
@@ -57,11 +57,11 @@
   <!-- nama folder terkait -->
     <template id="place_into_bar" inherit_id="website.snippets" name="Place into bar">
         <xpath expr="//div[@id='snippet_structure']/div[@class='o_panel_body']" position="inside">
-            <t t-snippet="new_snippet.snippet_track_connote"
-            t-thumbnail="/new_snippet/static/src/img/img.jpg"/>
+            <t t-snippet="website_legapaket.snippet_track_connote"
+            t-thumbnail="/website_legapaket/static/src/img/img.jpg"/>
 
-            <t t-snippet="new_snippet.snippet_calculate_shipping_cost"
-            t-thumbnail="/new_snippet/static/src/img/img2.png"/>
+            <t t-snippet="website_legapaket.snippet_calculate_shipping_cost"
+            t-thumbnail="/website_legapaket/static/src/img/img2.png"/>
         </xpath>
     </template>  
 </odoo>
