--- a/views/website.xml
+++ b/views/website.xml
@@ -21,18 +21,27 @@
 
 		<template id="tracking_main">
 			<t t-set="i" t-value="1"/>
-			<table style="width:100%">
-				<tr>
-					<th>#</th>
-					<th>Location</th>
-					<th>Time</th>
-					<th>Status</th>
-				</tr>
-				<t t-foreach="responses" t-as="response">
-					<t t-call="website_legapaket.tracking_row"></t>
-					<t t-set="i" t-value="i+1"/>
-				</t>
-			</table>
+			<div class="container">
+				<div class="panel panel-default">
+					<table class="table" style="width:100%">
+						<tr class="active">
+							<th colspan="4">
+								Tracking Result for Connote <t t-esc="connote"/>
+							</th>
+						</tr>
+						<tr class="active">
+							<th>#</th>
+							<th>Location</th>
+							<th>Time</th>
+							<th>Status</th>
+						</tr>
+						<t t-foreach="responses" t-as="response">
+							<t t-call="website_legapaket.tracking_row"></t>
+							<t t-set="i" t-value="i+1"/>
+						</t>
+					</table>
+				</div>
+			</div>
 		</template>
 
 		<!-- Tracking Row ===================================================================================================================-->
@@ -52,7 +61,12 @@
 			<t t-call="website.layout">
 				<div id="wrap" class="wrap_bg">
 					<t t-call="website_legapaket.snippet_calculate_shipping_cost"></t>
-					<t t-call="website_legapaket.calculate_main"></t>
+					<t t-if="message != None">
+						<t t-esc="message"></t>
+					</t>
+					<t t-else="">
+						<t t-call="website_legapaket.calculate_main"></t>
+					</t>
 				</div>
 			</t>
 		</template>
@@ -61,22 +75,26 @@
 
 		<template id="calculate_main">
 			<t t-set="i" t-value="1"/>
-			<table style="width:100%">
-				<tr>
-					<th>
-						Shipping cost calculation for <t t-esc="weight"/>kg(s) <t t-esc="dimension" /> cm from <t t-esc="city_from" /> to <t t-esc="city_to" />
-					</th>
-				</tr>
-				<tr>
-					<th>#</th>
-					<th>Product</th>
-					<th>Cost</th>
-				</tr>
-				<t t-foreach="responses" t-as="response">
-					<t t-call="website_legapaket.calculate_row"></t>
-					<t t-set="i" t-value="i+1"/>
-				</t>
-			</table>
+			<div class="container">
+				<div class="panel panel-default">
+					<table class="table" style="width:100%">
+						<tr class="active">
+							<th colspan="3">
+								Shipping cost calculation for <t t-esc="weight"/>kg(s) <t t-esc="dimension" /> cm from <t t-esc="city_from" /> to <t t-esc="city_to" />
+							</th>
+						</tr>
+						<tr class="active">
+							<th>#</th>
+							<th>Product</th>
+							<th>Cost</th>
+						</tr>
+						<t t-foreach="responses" t-as="response">
+							<t t-call="website_legapaket.calculate_row"></t>
+							<t t-set="i" t-value="i+1"/>
+						</t>
+					</table>
+				</div>
+			</div>
 		</template>
 
 		<!-- Calculate Row ===================================================================================================================-->
