--- a/views/snippets.xml
+++ b/views/snippets.xml
@@ -20,8 +20,8 @@
 		<section class="snippet_calculate_shipping_cost">
 			<form action="/calculate" method="get">
 				<div class="container text-center">
-					<div class="row">
-						<div class="col-md-4">
+					<!-- <div class="row">
+						<div class="col-md-4"> -->
 							<div class="input-group input-group-md form-group" style="width:100%">
 								<label class="input-group-addon" asp-for="origin" style="width:30%">From</label>
 								<input name="city_from" asp-for="origin" class="form-control" type="text" placeholder="Input origin city..."/>
@@ -38,8 +38,9 @@
 								<label class="input-group-addon" asp-for="dimension" style="width:30%">dimension</label>
 								<input name="dimension" asp-for="dimension" class="form-control" type="text" placeholder="Input dimension (wxhxd) in cm"/>
 							</div>
-						</div>
-					</div>
+						<!-- </div>
+						
+					</div> -->
 				</div>
 				<div class="container">
 					<button type="submit" class="btn btn-success text-left">Calculate</button>
