--- a/views/website.xml
+++ b/views/website.xml
@@ -60,13 +60,19 @@
 		<template id="calculate">
 			<t t-call="website.layout">
 				<div id="wrap" class="wrap_bg">
-					<t t-call="website_legapaket.snippet_calculate_shipping_cost"></t>
-					<t t-if="message != None">
-						<t t-esc="message"></t>
-					</t>
-					<t t-else="">
-						<t t-call="website_legapaket.calculate_main"></t>
-					</t>
+					<div class="row">
+						<div class="col-md-3">
+							<t t-call="website_legapaket.snippet_calculate_shipping_cost"></t>
+						</div>
+						<div class="col-md-9">
+							<t t-if="message != None">
+								<t t-esc="message"></t>
+							</t>
+							<t t-else="">
+								<t t-call="website_legapaket.calculate_main"></t>
+							</t>
+						</div>
+					</div>
 				</div>
 			</t>
 		</template>
